# visualization

./: .gitignore  LICENSE  README.md  pyproject.toml
cases/: README.md  altair_map.ipynb  bokeh_map.ipynb  cases_by_week.ipynb  dengue_br_2010-2022_quarter.csv  heatmap_altair.ipynb  heatmap_dengue.html  plotly_map.ipynb  stream_plot.ipynb
cases/data/: RJ_dengue.parquet  chik_br_2010-2022_quarter.csv  dengue_week.csv
cases/data/shapefile_BR/: states.dbf  states.shp  states.shx
climate/: heatmap_altair.ipynb
climate/data/: climate_br_2000-2023_quarter.csv
climate/files_html/: heatmap_dengue.html
forecasts/: bar_error.ipynb  plot_forecast_altair.ipynb
forecasts/data/: cases_MG_2023.csv  forecasts.csv  preds_MG_2023.csv  target.csv
forecasts/files_html/: bar_error.html  forecast_dengue.html
plotly_viz/: forecasts.ipynb  heat_map.ipynb  json  maps.ipynb  plotly_viz.py
