[tool.poetry]
name = "visualization"
version = "0.1.0"
description = ""
authors = ["Flavio Codeço Coelho <fccoelho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.18.0"
altair = "^5.1.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
